Fix header z-index

--- a/src/css/blocks/header.css
+++ b/src/css/blocks/header.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    z-index: 1;
+    z-index: 10;
     position: fixed;
     background-color: #000000;
 }
